# cdu-workbench

./: Cargo.toml  LICENSE  README.md
configs/: global.confi.yaml  sensors.yaml
src/: main.rs
src/app/: server.rs
src/config/alarm_config/: config.yaml
src/models/: emiter.rs  mod.rs  modbus_client.rs  modbus_client_example.rs
src/plugins/: mod.rs  plugin.rs  plugin_manager.rs
src/plugins/sensors/: sensor.rs
src/utils/: datetime.rs  file_store.rs  file_stroe.rs  mod.rs
